--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
+*.pepk
 .idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
@@ -43,5 +44,5 @@ app.*.map.json
 /android/app/release
 
 key0
-private_key
+private_key.pepk
 Untitled
